# navi

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  RECAP.md  TODO_LIST.md  build.rs  demo.tape
.claude/: settings.json
.claude/skills/run-checks/: SKILL.md
assets/: frame_000.txt  frame_004.txt  frame_005.txt  frame_011.txt
demos/: conversation.tape  editing.tape  modes.tape  start.tape  tools.tape
docs/learning/: goals.md  journal.md
docs/learning/concepts/: enums.md  pattern-matching.md  repl-pattern.md  traits.md
src/: lib.rs  main.rs  test_support.rs
src/api/: client.rs  mod.rs  types.rs
src/core/: action.rs  config.rs  mod.rs  session.rs  state.rs  tools.rs
src/core/sandbox/: docker.rs  local.rs  mod.rs  session.rs
src/core/tools/: arithmetic.rs  bash.rs  io.rs  math.rs  mod.rs  permission.rs
src/inference/: mod.rs  model_discovery.rs  provider.rs  task.rs  types.rs
src/inference/providers/: lmstudio.rs  mod.rs  openrouter.rs
src/inference/tasks/: title.rs
src/tui/: component.rs  event.rs  handlers.rs  markdown.rs  mod.rs  stream_buffer.rs  tasks.rs  ui.rs
src/tui/components/: input_box.rs  landing.rs  logo.rs  message.rs  message_list.rs  mod.rs  model_picker.rs  session_manager.rs  title_bar.rs  tool_approval.rs  tool_message.rs
src/tui/components/input_box/: cursor.rs  mod.rs  text_wrap.rs
tests/: provider_integration_tests.rs
