[package]
name = "navi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = { version = "0.15" }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
crossterm = "0.29.0"
