[package]
name = "navi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = { version = "0.15" }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
crossterm = "0.29.0"
tui-scrollview = "0.6"
async-trait = "0.1"
schemars = "0.8"
futures = "0.3.31"
log = "0.4"
simplelog = "0.12"
clap = { version = "4", features = ["derive"] }
textwrap = "0.16.2"
pulldown-cmark = "0.13"
syntect = "5.3"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[dev-dependencies]
wiremock = "0.6"        # Mock HTTP server for integration tests
tokio-test = "0.4"      # Async test utilities
